--- a/composer.json
+++ b/composer.json
@@ -40,12 +40,12 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.12",
         "symfony/var-dumper": "^2.8||^3.0",
-        "symfony/debug": "^2.8||^3.0",
         "sensiolabs/security-checker": "^4.0"
     },
     "require": {
         "php": ">=5.4.0",
-        "ext-redis": "*"
+        "ext-redis": "*",
+        "symfony/debug": "^2.8||^3.0"
     },
     "scripts": {
         "chk-cs": [
