Add Controller, Models, Tests, Templates and Locales

--- a/.docker/Dockerfile-dev
+++ b/.docker/Dockerfile-dev
@@ -1,8 +1,6 @@
-FROM php:7.0-apache
+FROM php:7.0-cli
 
 MAINTAINER sasan.rose@gmail.com
-
-EXPOSE 80
 
 RUN apt-get update \
     && apt-get install zlib1g-dev \
@@ -14,18 +12,4 @@ RUN apt-get update \
     && docker-php-ext-enable propro \
     && pecl install pecl_http-3.1.0 \
     && docker-php-ext-enable http \
-    && docker-php-ext-install gettext \
-    && a2enmod rewrite
-
-COPY .docker/apache/default.conf /etc/apache2/sites-available/000-default.conf
-
-COPY . /var/www/html/phpredmin
-
-WORKDIR /var/www/html/phpredmin
-
-COPY .docker/apache/.htaccess /root/.htaccess
-COPY .docker/start.sh /root/start.sh
-
-RUN chmod u+x /root/start.sh
-
-CMD ["/root/start.sh"]
+    && docker-php-ext-install gettext
