--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -37,6 +37,7 @@ return (new PhpCsFixer\Config('PHPRedmin'))
             ->exclude('vendor')
             ->exclude('.git')
             ->in(__DIR__.'/src')
+            ->in(__DIR__.'/public')
             ->in(__DIR__.'/src-test')
     )
     ->setCacheFile(__DIR__.'/.php_cs.cache')
