--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
             - PHPREDMIN_REDIS_SERVERS_ADDR_0=redis
             - PHPREDMIN_REDIS_SERVERS_PORT_0=6379
             - PHPREDMIN_TEMPLATES_CACHE_DIR=/tmp/php-redmin-cache
+            - PHPREDMIN_DEVELOPMENT_MODE=1
+            - PHPREDMIN_LOG_LEVEL=7
         ports:
             - "8080:80"
         depends_on:
