--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,9 @@
         "ext-redis": "*",
         "kriswallsmith/assetic": "^1.4",
         "league/route": "^3.0",
-        "psr/http-message": "^1.0",
         "pimple/pimple": "^3.0",
+        "psr/http-message": "^1.0",
+        "psr7-sessions/storageless": "^3.0.1",
         "twig/twig": "~2.0",
         "twig/extensions": "^1.5",
         "zendframework/zend-diactoros": "^1.6",
