--- a/.docker/apache/default.conf
+++ b/.docker/apache/default.conf
@@ -1,6 +1,9 @@
-<VirtualHost *:80>
-        ServerAdmin webmaster@localhost
+<VirtualHost *:443>
         DocumentRoot /var/www/html/phpredmin/public
+
+        SSLEngine on
+        SSLCertificateFile /secrets/phpredmin_ssl_cert.pem
+        SSLCertificateKeyFile /secrets/phpredmin_ssl_key.pem
 
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
